@@ -1,5 +1,11 @@
 [b]Version 0.6.2[/b]:
 
+(2008-06-09)
+ * Added the opensubtitles patch by Kamil Dziobek <turbos11@gmail.com> (with
+   some modifications). This adds an option in the subtitles menu which 
+   allows you to download subtitles for the file you're playing, and another
+   one to upload subtitles.
+
 (2008-06-07)
  * Manually removed "<pixmapfunction>qPixmapFromMimeSource</pixmapfunction>"
    from several *.ui files because otherwise the files generated by uic
